# Minecraft-Base-Finder

./: LICENSE  README.md
find/: main.py
find/config/: constants.py
find/core/cpp/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
find/core/cpp/include/: analyzer.hpp  detection.hpp  jsonLoader.hpp
find/core/cpp/src/: analyzer.cpp  detection.cpp  jsonLoader.cpp  main.cpp
find/core/python/: converter.py  detection.py  filtering.py  logger.py  minescriptExtra.py  scanning.py
find/data/detections/: detection2.json
find/data/findings/: findings_20260313035043.json
find/modes/: modes.py
find/test/: chunk_test.py
